--- a/SubscriptionApi/SubApi.csproj
+++ b/SubscriptionApi/SubApi.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Dapr.AspNetCore" Version="1.10.0" />
     <PackageReference Include="Dapr.Client" Version="1.10.0" />
@@ -16,5 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Folder Include="..\Config\Component\" />
+  </ItemGroup>
 </Project>
