--- a/AlertApi/WebApi.csproj
+++ b/AlertApi/WebApi.csproj
@@ -13,13 +13,14 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-    <PackageReference Include="twilio" Version="7.2.2" />
-    <PackageReference Include="Twilio.AspNet.Core" Version="8.0.2" />
-    <PackageReference Include="Twilio.AspNet.Mvc" Version="8.0.2" />
+
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="..\Config\Component\" />
   </ItemGroup>
 
 </Project>
