--- a/AlertApi/WebApi.csproj
+++ b/AlertApi/WebApi.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="Dapr.Client" Version="1.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="sendgrid" Version="9.29.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="twilio" Version="7.2.2" />
 
   </ItemGroup>
 
